--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -153,6 +153,28 @@
   timestamp = {2022.05.25},
 }
 
+@InProceedings{Abouelaziz2016,
+  author    = {Abouelaziz, I. and El Hassouni, M. and Cherifi, H.},
+  title     = {A Curvature Based Method for Blind Mesh Visual Quality Assessment Using a General Regression Neural Network},
+  booktitle = {12th International Conference on Signal-Image Technology \&amp; Internet-Based Systems},
+  year      = {2016},
+  pages     = {793-797},
+  doi       = {10.1109/sitis.2016.130},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
+}
+
+@InProceedings{Abouelaziz2017,
+  author    = {Abouelaziz, I. and Hassouni, M. El and Cherifi, H.},
+  title     = {A convolutional neural network framework for blind mesh visual quality assessment},
+  booktitle = {IEEE International Conference on Image Processing},
+  year      = {2017},
+  pages     = {755-759},
+  doi       = {10.1109/icip.2017.8296382},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
+}
+
 @Article{Abraham2006,
   author    = {Abraham, L. and Appiah, O.},
   title     = {Framing News Stories: The Role of Visual Imagery in Priming Racial Stereotypes},
@@ -21441,6 +21463,18 @@
   timestamp = {2019.07.14},
 }
 
+@Article{Ghalmane2020a,
+  author    = {Ghalmane, Z. and Cherifi, C. and Cherifi, H. and El Hassouni, M.},
+  title     = {Extracting Backbones in Weighted Modular Complex Networks},
+  journal   = {Scientific Reports},
+  year      = {2020},
+  volume    = {10},
+  pages     = {15539},
+  doi       = {10.1038/s41598-020-71876-0},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
+}
+
 @Article{Ghannay2016,
   author    = {Ghannay, S. and Favre, B. and Estève, Y. and Camelin, N.},
   title     = {Word embedding evaluation and combination},
@@ -21461,6 +21495,18 @@
   doi       = {10.1109/slt.2018.8639513},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@Article{Ghawi2022,
+  author    = {Ghawi, R. and Pfeffer, J.},
+  title     = {A community matching based approach to measuring layer similarity in multilayer networks},
+  journal   = {Social Networks},
+  year      = {2022},
+  volume    = {68},
+  pages     = {1-14},
+  doi       = {10.1016/j.socnet.2021.04.004},
+  owner     = {Vincent},
+  timestamp = {2021.04.29},
 }
 
 @Article{Ghoniem2005,
@@ -21712,6 +21758,18 @@
   owner     = {Vincent},
   timestamp = {2021.09.18},
   url       = {https://www.mla.org/Publications/Bookstore/Approaches-to-Teaching-World-Literature/Approaches-to-Teaching-Hugo-s-Les-Miserables},
+}
+
+@Article{Giordano2019,
+  author    = {Giordano, G. and Ragozini, G. and Vitale, M. P.},
+  title     = {Analyzing multiplex networks using factorial methods},
+  journal   = {Social Networks},
+  year      = {2019},
+  volume    = {59},
+  pages     = {154–170},
+  doi       = {10.1016/j.socnet.2019.07.005},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
 }
 
 @TechReport{Giorgino2004,
@@ -33270,6 +33328,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2024.04.22},
 }
 
+@InProceedings{Lafhel2023,
+  author    = {Lafhel, M. and El Hassouni, M. and Renoust, B. and Cherifi, H.},
+  title     = {Measuring Movie Script Similarity using Characters, Keywords, Locations, and Interactions},
+  booktitle = {French Regional Conference on Complex Systems},
+  year      = {2023},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
+  url       = {https://hal.science/hal-04055079},
+}
+
 @Article{Lafhel2024,
   author    = {Lafhel, M. and Cherifi, H. and Renoust, B. and El Hassouni, M.},
   title     = {Comparison of Graph Distance Measures for Movie Similarity Using a Multilayer Network Model},
@@ -33281,6 +33349,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3390/e26020149},
   owner     = {Vincent},
   timestamp = {2024.02.13},
+}
+
+@InProceedings{Lafhel2024a,
+  author    = {Lafhel, M. and Cherifi, H. and El Hassouni, M. and Renoust, B.},
+  title     = {Analyzing Movie Script Similarity: A Weighted Multilayer Network Approach},
+  booktitle = {French Regional Conference on Complex Systems},
+  year      = {2024},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
+  url       = {https://hal.science/hal-04553586},
 }
 
 @InCollection{Laguna2013,
@@ -38900,7 +38978,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{MartinezCarro2019,
-  author    = {Martínez Carro, E. and Santa María Fernández, T.},
+  author    = {Martínez Carro, E. and Santa María Fernández, M. T.},
   title     = {Textual Electronic Library of the Spanish Theater (1868-1936) and Research with Graphs},
   journal   = {Revista de Humanidades Digitales},
   year      = {2019},
@@ -48055,6 +48133,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.12},
 }
 
+@Article{Qureshi2021,
+  author    = {Qureshi, K. A. and Malick, R. A. S. and Sabih, M. and Cherifi, H.},
+  title     = {Complex Network and Source Inspired COVID-19 Fake News Classification on Twitter},
+  journal   = {IEEE Access},
+  year      = {2021},
+  volume    = {9},
+  pages     = {139636–139656},
+  doi       = {10.1109/access.2021.3119404},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
+}
+
 @Article{Raab2003,
   author    = {Raab, J. and Milward, H. B.},
   title     = {Dark Networks as Problems},
@@ -48182,6 +48272,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.ijpsycho.2005.10.024},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@Article{Rajeh2021,
+  author        = {Rajeh, S. and Savonnet, M. and Leclercq, E. and Cherifi, H.},
+  title         = {Characterizing the interactions between classical and community-aware centrality measures in complex networks},
+  journal       = {Scientific Reports},
+  year          = {2021},
+  volume        = {11},
+  pages         = {10088},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1038/s41598-021-89549-x},
+  owner         = {Vincent},
+  timestamp     = {2021.05.14},
+}
+
+@Article{Rajeh2022a,
+  author        = {Rajeh, S. and Savonnet, M. and Leclercq, E. and Cherifi, H.},
+  title         = {Comparative evaluation of community-aware centrality measures},
+  journal       = {Quality \& Quantity},
+  year          = {2023},
+  volume        = {57},
+  pages         = {1273-1302},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1007/s11135-022-01416-7},
+  owner         = {Vincent},
+  timestamp     = {2022.05.12},
 }
 
 @InProceedings{Raji2019,
