--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1882,6 +1882,19 @@
   timestamp = {2020.07.20},
 }
 
+@Article{Amelang2019,
+  author    = {Amelang, D. J.},
+  title     = {Playing Gender: Toward a Quantitative Comparison of Female Roles in Lope de Vega and Shakespeare},
+  journal   = {Bulletin of the Comediantes},
+  year      = {2019},
+  volume    = {71},
+  number    = {1–2},
+  pages     = {119–134},
+  doi       = {10.1353/boc.2019.0008},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
+}
+
 @Article{Amelio2016,
   author    = {Amelio, A. and Pizzuti, C.},
   title     = {An Evolutionary and Local Refinement Approach for Community Detection in Signed Networks},
@@ -12363,6 +12376,18 @@
   url       = {https://www.leslibraires.fr/livre/19837579-paris-dans-les-miserables---hugo-combes-claudette--paris-cid-editions-1981},
 }
 
+@InCollection{Comrie2005,
+  author    = {Comrie, B.},
+  title     = {Grammatical Gender and Personification},
+  booktitle = {Perspectives on Language and Language Development},
+  publisher = {Springer},
+  year      = {2005},
+  pages     = {105-114},
+  doi       = {10.1007/1-4020-7911-7_9},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
+}
+
 @Article{Conaldi2012,
   author    = {Conaldi, G. and Lomi, A. and Tonellato, M.},
   title     = {Dynamic Models of Affiliation and the Network Structure of Problem Solving in an Open Source Software Project},
@@ -22313,6 +22338,20 @@
   doi       = {10.1007/978-3-319-02756-2_27},
   owner     = {Vincent},
   timestamp = {2020.03.16},
+}
+
+@InCollection{Gomez2019,
+  author    = {Gómez, S.},
+  title     = {Centrality in Networks: Finding the Most Important Nodes},
+  booktitle = {Business and Consumer Analytics: New Ideas},
+  publisher = {Springer},
+  year      = {2019},
+  chapter   = {8},
+  pages     = {401-433},
+  doi       = {10.1007/978-3-030-06222-4_8},
+  groups    = {_Reviews/Surveys (Centralities)},
+  owner     = {Vincent},
+  timestamp = {2019.06.07},
 }
 
 @Article{GomezEsteban2019,
@@ -33674,6 +33713,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.08.11},
 }
 
+@Article{Landherr2010,
+  author    = {Landherr, A. and Friedl, B. and Heidemann, J.},
+  title     = {A Critical Review of Centrality Measures in Social Networks},
+  journal   = {Business \& Information Systems Engineering},
+  year      = {2010},
+  volume    = {2},
+  number    = {6},
+  pages     = {371-385},
+  doi       = {10.1007/s12599-010-0127-3},
+  owner     = {Vincent},
+  timestamp = {2015.07.24},
+}
+
 @Article{Landis1977,
   author    = {Landis, J. R. and Koch, G. G.},
   title     = {The Measurement of Observer Agreement for Categorical Data},
@@ -40190,6 +40242,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/42945872},
 }
 
+@Article{Medici2018,
+  author    = {Medici, C.},
+  title     = {Using Network Analysis to Understand Early Modern Women},
+  journal   = {Early Modern Women},
+  year      = {2018},
+  volume    = {13},
+  number    = {1},
+  pages     = {153-162},
+  doi       = {10.1353/emw.2018.0058},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
+}
+
 @Article{Mednick1968,
   author    = {Mednick, S. A.},
   title     = {The Remote Associates Test},
@@ -45448,7 +45513,9 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title     = {Louise or Ferdinand? Exploring the protagonists of Love and Intrigue using social network analysis},
   journal   = {Digital Scholarship in the Humanities},
   year      = {2023},
-  volume    = {in press},
+  volume    = {38},
+  number    = {3},
+  pages     = {1214-1226},
   doi       = {10.1093/llc/fqad007},
   owner     = {Vincent},
   timestamp = {2023.03.10},
