--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -880,6 +880,19 @@
   url       = {https://books.google.fr/books?id=68Y5gUavbzwC},
 }
 
+@Article{Aizawa2020,
+  author    = {Aizawa, K. and Fujimoto, A. and Otsubo, A. and Ogawa, T. and Matsui, Y. and Tsubota, K. and Ikuta, H.},
+  title     = {Building a Manga Dataset ``Manga109'' With Annotations for Multimedia Applications},
+  journal   = {IEEE MultiMedia},
+  year      = {2020},
+  volume    = {27},
+  number    = {2},
+  pages     = {8-18},
+  doi       = {10.1109/mmul.2020.2987895},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
+}
+
 @InProceedings{Ajmera2003,
   author    = {Ajmera, J. and Wooters, C.},
   title     = {A robust speaker clustering algorithm},
@@ -1888,8 +1901,8 @@
   journal   = {Bulletin of the Comediantes},
   year      = {2019},
   volume    = {71},
-  number    = {1–2},
-  pages     = {119–134},
+  number    = {1-2},
+  pages     = {119-134},
   doi       = {10.1353/boc.2019.0008},
   owner     = {Vincent},
   timestamp = {2024.04.25},
@@ -4844,7 +4857,7 @@
 }
 
 @Book{Bel2010,
-  title     = {Women's Writing from the Low Countries 1880–2010: An Anthology},
+  title     = {Women's Writing from the Low Countries 1880-2010: An Anthology},
   publisher = {Amsterdam University Press},
   year      = {2010},
   author    = {Bel, J. and Vaessens, T.},
@@ -5457,7 +5470,7 @@
   journal   = {Annual Review of Psychology},
   year      = {1994},
   volume    = {45},
-  pages     = {79–129},
+  pages     = {79-129},
   doi       = {10.1146/annurev.ps.45.020194.000455},
   owner     = {Vincent},
   timestamp = {2024.04.24},
@@ -6480,7 +6493,7 @@
   journal   = {Transactions of the Association for Computational Linguistics},
   year      = {2023},
   volume    = {11},
-  pages     = {212–226},
+  pages     = {212-226},
   doi       = {10.1162/tacl_a_00543},
   owner     = {Vincent},
   timestamp = {2024.04.24},
@@ -7577,7 +7590,7 @@
   year      = {1970},
   volume    = {29},
   number    = {2},
-  pages     = {1–16},
+  pages     = {1-16},
   doi       = {10.15581/003.29.35920},
   owner     = {Vincent},
   timestamp = {2024.04.21},
@@ -10164,7 +10177,7 @@
   year      = {2020},
   volume    = {36},
   number    = {Supplement_2},
-  pages     = {ii72–ii77},
+  pages     = {ii72-ii77},
   doi       = {10.1093/llc/fqaa051},
   owner     = {Vincent},
   timestamp = {2024.04.20},
@@ -11001,7 +11014,7 @@
   journal   = {Information Sciences},
   year      = {2020},
   volume    = {535},
-  pages     = {130–141},
+  pages     = {130-141},
   doi       = {10.1016/j.ins.2020.05.044},
   owner     = {Vincent},
   timestamp = {2024.04.22},
@@ -15800,7 +15813,7 @@
   journal   = {IEEE Access},
   year      = {2020},
   volume    = {8},
-  pages     = {188335–188351},
+  pages     = {188335-188351},
   doi       = {10.1109/access.2020.3030693},
   owner     = {Vincent},
   timestamp = {2024.04.22},
@@ -17295,7 +17308,7 @@
 }
 
 @Book{Ellis1999,
-  title     = {Appearing to Diminish: Female Development and the British Bildungsroman, 1750–1850 .},
+  title     = {Appearing to Diminish: Female Development and the British Bildungsroman, 1750-1850 .},
   publisher = {Associated University Presses},
   year      = {1999},
   author    = {Ellis, L.},
@@ -19043,7 +19056,7 @@
 
 @InProceedings{Fischer2015,
   author    = {Fischer, F. and Strötgen, J.},
-  title     = {When Does German Literature Take Place? – On the Analysis of Temporal Expressions in Large Corpora},
+  title     = {When Does German Literature Take Place? - On the Analysis of Temporal Expressions in Large Corpora},
   booktitle = {Annual Conference of the Alliance of Digital Humanities Organizations},
   year      = {2015},
   owner     = {Vincent},
@@ -19120,7 +19133,7 @@
 @Electronic{Fischer2018a,
   author       = {Fischer, F. and Schultz, A. and Kittel, C. and Beshero-Bondar, E. and Martus, S. and Trilcke, P. and Wolf, J. and Börner, I. and Hechtl, A. and Skorinkin, D. and Orlova, T. and Milling, C. and Ivanovic, C.},
   year         = {2018},
-  title        = {Brecht Beats Shakespeare! – A Card-Game Introduction to the Network Analysis of European Drama},
+  title        = {Brecht Beats Shakespeare! - A Card-Game Introduction to the Network Analysis of European Drama},
   howpublished = {\url{https://github.com/lehkost/dramenquartett}},
   organization = {{dramenquartett}},
   doi          = {10.6084/m9.figshare.6667424.v1},
@@ -20659,7 +20672,7 @@
   journal   = {Theory, Culture \& Society},
   year      = {2011},
   volume    = {28},
-  number    = {7–8},
+  number    = {7-8},
   pages     = {85-102},
   doi       = {10.1177/0263276411423038},
   owner     = {Vincent},
@@ -21791,7 +21804,7 @@
   journal   = {Social Networks},
   year      = {2019},
   volume    = {59},
-  pages     = {154–170},
+  pages     = {154-170},
   doi       = {10.1016/j.socnet.2019.07.005},
   owner     = {Vincent},
   timestamp = {2024.04.25},
@@ -23859,7 +23872,7 @@
   year      = {2012},
   volume    = {45},
   number    = {5},
-  pages     = {885–892},
+  pages     = {885-892},
   doi       = {10.1016/j.jbi.2012.04.008},
   owner     = {Vincent},
   timestamp = {2024.04.24},
@@ -24466,7 +24479,7 @@
 @InProceedings{Handzic2017a,
   author    = {Handzic, M. and Dizdar, S.},
   title     = {Picturing the past: A case of knowledge management application in archaeology},
-  booktitle = {12th international forum on knowledge asset dynamics – knowledge management in the 21st century: Resilience, creativity and co-creation},
+  booktitle = {12th international forum on knowledge asset dynamics - knowledge management in the 21st century: Resilience, creativity and co-creation},
   year      = {2017},
   pages     = {1251-1261},
   owner     = {Vincent},
@@ -24487,7 +24500,7 @@
 }
 
 @InProceedings{Handzic2019a,
-  author    = {Handzic, M. and Zulic, H. and Guja, Z. listening. In Proceedings of the 14th forum on knowledge asset dynamics – Knowledge ecosystems and growth (IFKAD 2019), 5–7 June, Matera, Italy, pp. 256–263.},
+  author    = {Handzic, M. and Zulic, H. and Guja, Z. listening},
   title     = {Knowledge discovery from arts data: A case of distant listening},
   booktitle = {14th Forum on Knowledge Asset Dynamics},
   year      = {2019},
@@ -24500,7 +24513,7 @@
 @InProceedings{Handzic2022,
   author    = {Handzic, M. and Mulavdic, V.},
   title     = {Combining close and distant Reading: A plausible way forward?},
-  booktitle = {Distant reading – COST Action CA16204 Closing Conference},
+  booktitle = {Distant reading - COST Action CA16204 Closing Conference},
   year      = {2022},
   owner     = {Vincent},
   timestamp = {2023.11.30},
@@ -25963,6 +25976,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url          = {http://i.imgur.com/d6XrPNG.jpg},
   owner        = {Vincent},
   timestamp    = {2016.03.29},
+}
+
+@Article{Hinami2021,
+  author    = {Hinami, R. and Ishiwatari, S. and Yasuda, K. and Matsui, Y.},
+  title     = {Towards Fully Automated Manga Translation},
+  journal   = {AAAI Conference on Artificial Intelligence},
+  year      = {2021},
+  volume    = {35},
+  number    = {14},
+  pages     = {12998-13008},
+  doi       = {10.1609/aaai.v35i14.17537},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
 }
 
 @InProceedings{Hinrichs2005,
@@ -29163,6 +29189,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.01},
 }
 
+@Book{Johnson-Woods2010,
+  title     = {Manga: An anthology of global and cultural perspectives},
+  publisher = {Bloomsbury Publishing},
+  year      = {2010},
+  author    = {Johnson-Woods, T.},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
+  url       = {https://www.bloomsbury.com/uk/manga-9780826429384/},
+}
+
 @Book{Johnston1992,
   title     = {The Ibsen Cycle: The Design of the Plays from Pillars of Society to When We Dead Awaken},
   publisher = {Penn State University Press},
@@ -30033,7 +30069,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   journal   = {Information Sciences},
   year      = {2013},
   volume    = {219},
-  pages     = {93–110},
+  pages     = {93-110},
   doi       = {10.1016/j.ins.2012.07.011},
   owner     = {Vincent},
   timestamp = {2024.04.22},
@@ -31266,7 +31302,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2018},
   volume    = {33},
   number    = {4},
-  pages     = {821–844},
+  pages     = {821-844},
   doi       = {10.1093/llc/fqy011},
   owner     = {Vincent},
   timestamp = {2024.04.20},
@@ -31513,7 +31549,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Klepel2019,
   author    = {Klepel, F. and Schredl, M.},
-  title     = {Correlation of task-related dream content with memory performance of a film task – A pilot study},
+  title     = {Correlation of task-related dream content with memory performance of a film task - A pilot study},
   journal   = {International Journal of Dream Research},
   year      = {2019},
   volume    = {12},
@@ -35893,7 +35929,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   journal   = {Expert Systems with Applications},
   year      = {2019},
   volume    = {137},
-  pages     = {324–334},
+  pages     = {324-334},
   doi       = {10.1016/j.eswa.2019.07.006},
   owner     = {Vincent},
   timestamp = {2024.04.22},
@@ -35965,7 +36001,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2020},
   volume    = {34},
   number    = {5},
-  pages     = {8155–8163},
+  pages     = {8155-8163},
   doi       = {10.1609/aaai.v34i05.6328},
   owner     = {Vincent},
   timestamp = {2024.01.13},
@@ -36012,7 +36048,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   journal   = {Literature Compass},
   year      = {2024},
   volume    = {21},
-  number    = {1–3},
+  number    = {1-3},
   pages     = {e12757},
   doi       = {10.1111/lic3.12757},
   owner     = {Vincent},
@@ -36779,9 +36815,21 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.04.15},
 }
 
+@InProceedings{Liu2022,
+  author    = {Liu, Z. and Ding, Y. and Wan, Q. and He, Z. and Zhang, Q.},
+  title     = {Generating Manga Images from Sketch Via GAN},
+  booktitle = {3rd International Conference on Computer Engineering and Intelligent Control},
+  year      = {2022},
+  volume    = {3344},
+  series    = {CEUR Workshop Proceedings},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
+  url       = {https://ceur-ws.org/Vol-3344/paper04.pdf},
+}
+
 @InProceedings{Liu2022aa,
   author    = {Liu, C. and Shmilovici, A. and Last, M.},
-  title     = {The Same Thing – Only Different: Classification of Movies by their Story Types},
+  title     = {The Same Thing - Only Different: Classification of Movies by their Story Types},
   booktitle = {Creative Video Editing and Understanding Workshop},
   year      = {2022},
   owner     = {Vincent},
@@ -36825,7 +36873,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @InProceedings{Liu2023h,
   author    = {Liu, C. and Shmilovici, A. and Last, M.},
-  title     = {The Same Thing – Only Different: Classification of Movies by their Story Types},
+  title     = {The Same Thing - Only Different: Classification of Movies by their Story Types},
   booktitle = {6th Workshop on Narrative Extraction From Texts},
   year      = {2023},
   series    = {CEUR Workshop Proceeedings},
@@ -36852,7 +36900,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {1976},
   volume    = {13},
   number    = {1},
-  pages     = {76–83},
+  pages     = {76-83},
   doi       = {10.1137/0713009},
   owner     = {Vincent},
   timestamp = {2024.04.22},
@@ -39975,7 +40023,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2015},
   volume    = {108},
   number    = {4},
-  pages     = {123–126},
+  pages     = {123-126},
   doi       = {10.1177/0141076815579584},
   owner     = {Vincent},
   timestamp = {2024.04.21},
@@ -41498,6 +41546,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1111/j.1467-8640.2012.00460.x},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@InProceedings{Mohammad2018,
+  author    = {Mohammad, S.},
+  title     = {Obtaining Reliable Human Ratings of Valence, Arousal, and Dominance for 20,000 English Words},
+  booktitle = {56th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2018},
+  pages     = {174-184},
+  doi       = {10.18653/v1/p18-1017},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
 }
 
 @Article{Mohan2019,
@@ -44828,7 +44887,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2005},
   volume    = {308},
   number    = {5719},
-  pages     = {255–258},
+  pages     = {255-258},
   doi       = {10.1126/science.1107621},
   owner     = {Vincent},
   timestamp = {2024.04.24},
@@ -46938,7 +46997,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Pikkanen2018,
   author    = {Pikkanen, I.},
-  title     = {The emergence of a story space: The image of the Club War (1596–97) in Swedish and Finnish historiography, 1620–1860},
+  title     = {The emergence of a story space: The image of the Club War (1596-97) in Swedish and Finnish historiography, 1620-1860},
   journal   = {Scandinavian Journal of History},
   year      = {2018},
   volume    = {43},
@@ -47090,7 +47149,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Pisinger1995,
   author    = {Pisinger, D.},
-  title     = {An expanding-core algorithm for the exact 0–1 knapsack problem},
+  title     = {An expanding-core algorithm for the exact 0-1 knapsack problem},
   journal   = {European Journal of Operational Research},
   year      = {1995},
   volume    = {87},
@@ -47668,7 +47727,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {1978},
   volume    = {1},
   number    = {4},
-  pages     = {515–526},
+  pages     = {515-526},
   doi       = {10.1017/s0140525x00076512},
   owner     = {Vincent},
   timestamp = {2024.04.24},
@@ -48131,7 +48190,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Quayum2015,
   author    = {Quayum, M. A.},
-  title     = {Hindu–Muslim Relations in the Work of Rabindranath Tagore and Rokeya Sakhawat Hossain},
+  title     = {Hindu-Muslim Relations in the Work of Rabindranath Tagore and Rokeya Sakhawat Hossain},
   journal   = {South Asia Research},
   year      = {2015},
   volume    = {35},
@@ -48206,7 +48265,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   journal   = {IEEE Access},
   year      = {2021},
   volume    = {9},
-  pages     = {139636–139656},
+  pages     = {139636-139656},
   doi       = {10.1109/access.2021.3119404},
   owner     = {Vincent},
   timestamp = {2024.04.25},
@@ -50328,7 +50387,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   journal   = {Economics of Education Review},
   year      = {2018},
   volume    = {62},
-  pages     = {230–253},
+  pages     = {230-253},
   doi       = {10.1016/j.econedurev.2017.11.006},
   owner     = {Vincent},
   timestamp = {2024.04.20},
@@ -50370,8 +50429,8 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @InCollection{Rogge2014,
   author    = {Rogge, J. and Salmi, H.},
-  title     = {Memory boxes: An experimental approach to cultural transfer in history, 1500–2000},
-  booktitle = {Memory boxes: An experimental approach to cultural transfer in history, 1500–2000},
+  title     = {Memory boxes: An experimental approach to cultural transfer in history, 1500-2000},
+  booktitle = {Memory boxes: An experimental approach to cultural transfer in history, 1500-2000},
   publisher = {Transcript},
   year      = {2014},
   pages     = {1-20},
@@ -51088,6 +51147,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner       = {Vincent},
   timestamp   = {2022.08.11},
   url         = {https://www.worldcat.org/title/complete-minnesota-norms-for-responses-to-100-words-from-the-kent-rosanoff-word-association-test/oclc/6801978},
+}
+
+@Article{Russell1980,
+  author    = {Russell, J. A.},
+  title     = {A circumplex model of affect.},
+  journal   = {Journal of Personality and Social Psychology},
+  year      = {1980},
+  volume    = {39},
+  number    = {6},
+  pages     = {1161-1178},
+  doi       = {10.1037/h0077714},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
 }
 
 @Book{Russell2002,
@@ -55386,6 +55458,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.03.18},
 }
 
+@Article{Solomon2022,
+  author    = {Solomon, D. H. and Jones, S. and Brinberg, M. and Bodie, G. D. and Ram, N.},
+  title     = {Using Sequence Analysis to Identify Conversational Motifs in Supportive Interactions},
+  journal   = {Journal of Social and Personal Relationships},
+  year      = {2022},
+  volume    = {39},
+  number    = {10},
+  pages     = {3155–3179},
+  doi       = {10.1177/02654075211066618},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
+}
+
 @Article{Solomonoff1951,
   author    = {Solomonoff, R. and Rapoport, A.},
   title     = {Connectivity of random nets},
@@ -56936,6 +57021,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://people.cs.umass.edu/~mccallum/papers/crf-tutorial.pdf},
 }
 
+@InProceedings{Suzuki2022,
+  author    = {Suzuki, H. and Miyauchi, Y. and Akiyama, K. and Kajiwara, T. and Ninomiya, T. and Takemura, N. and Nakashima, Y. and Nagahara, H.},
+  title     = {A Japanese dataset for subjective and objective sentiment polarity classification in micro blog domain},
+  booktitle = {13th Language Resources and Evaluation Conference},
+  year      = {2022},
+  pages     = {7022-7028},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
+  url       = {https://aclanthology.org/2022.lrec-1.759/},
+}
+
 @Article{Swain1991,
   author    = {Swain, M. J. and Ballard, D. H.},
   title     = {Color indexing},
@@ -57305,6 +57401,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner       = {Vincent},
   timestamp   = {2021.09.02},
   url         = {http://myto.upm.edu.my/find/Record/um.u1112507},
+}
+
+@InProceedings{Tan2019,
+  author    = {Tan, M. and Le, Q.},
+  title     = {EfficientNet: Rethinking Model Scaling for Convolutional Neural Networks},
+  booktitle = {36th International Conference on Machine Learning},
+  year      = {2019},
+  volume    = {97},
+  series    = {Proceedings of Machine Learning Research},
+  address   = {6105-6114},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
+  url       = {https://proceedings.mlr.press/v97/tan19a.html?ref=jina-ai-gmbh.ghost.io},
 }
 
 @Article{Tanahashi2012,
@@ -58920,7 +59029,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @InProceedings{Trilcke2016,
   author    = {Trilcke, P. and Fischer, F. and Göbel, M. and Kampkaspar, D.},
-  title     = {Theatre Plays as 'Small Worlds'? Network Data on the History and Typology of German Drama, 1730–1930},
+  title     = {Theatre Plays as 'Small Worlds'? Network Data on the History and Typology of German Drama, 1730-1930},
   booktitle = {Digital Humanities Conference},
   year      = {2016},
   pages     = {360},
@@ -59499,6 +59608,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-319-11812-3_27},
   owner     = {Vincent},
   timestamp = {2023.03.23},
+}
+
+@Article{Unser-Schutz2015,
+  author    = {Unser-Schutz, G.},
+  title     = {Influential or influenced?: The relationship between genre, gender and language in manga},
+  journal   = {Gender and Language},
+  year      = {2015},
+  volume    = {9},
+  number    = {2},
+  pages     = {223-254},
+  doi       = {10.1558/genl.v9i2.17331},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
 }
 
 @MastersThesis{Urbanova2021,
@@ -61174,7 +61296,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   journal   = {International AAAI Conference on Web and Social Media},
   year      = {2019},
   volume    = {13},
-  pages     = {517–526},
+  pages     = {517-526},
   doi       = {10.1609/icwsm.v13i01.3249},
   owner     = {Vincent},
   timestamp = {2024.04.20},
@@ -62060,7 +62182,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2008},
   volume    = {8},
   number    = {12},
-  pages     = {16–17},
+  pages     = {16-17},
   doi       = {10.1080/15265160802478503},
   owner     = {Vincent},
   timestamp = {2024.04.21},
@@ -62518,7 +62640,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {1983},
   volume    = {13},
   number    = {1},
-  pages     = {103–128},
+  pages     = {103-128},
   doi       = {10.1016/0010-0277(83)90004-5},
   owner     = {Vincent},
   timestamp = {2024.04.24},
@@ -63114,7 +63236,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2013},
   volume    = {5},
   number    = {2},
-  pages     = {568–573},
+  pages     = {568-573},
   doi       = {10.19026/rjaset.5.4991},
   owner     = {Vincent},
   timestamp = {2024.04.22},
@@ -63195,6 +63317,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.ecoinf.2020.101068},
   owner     = {Vincent},
   timestamp = {2022.06.26},
+}
+
+@Article{Xie2021,
+  author    = {Xie, M. and Xia, M. and Liu, X. and Li, C. and Wong, T.-T.},
+  title     = {Seamless manga inpainting with semantics awareness},
+  journal   = {ACM Transactions on Graphics},
+  year      = {2021},
+  volume    = {40},
+  number    = {4},
+  pages     = {96},
+  doi       = {10.1145/3450626.3459822},
+  owner     = {Vincent},
+  timestamp = {2024.04.25},
 }
 
 @Article{XiweiTang2014,
@@ -63344,7 +63479,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @InProceedings{Xu2022,
   author    = {Xu, Y. and Wang, D. and Yu, M. and Ritchie, D. and Yao, B. and Wu, T. and Zhang, Z. and Li, T. and Bradford, N. and Sun, B. and Hoang, T. and Sang, Y. and Hou, Y. and Ma, X. and Yang, D. and Peng, N. and Yu, Z. and Warschauer, M.},
-  title     = {Fantastic Questions and Where to Find Them: FairytaleQA – An Authentic Dataset for Narrative Comprehension},
+  title     = {Fantastic Questions and Where to Find Them: FairytaleQA - An Authentic Dataset for Narrative Comprehension},
   booktitle = {60th Annual Meeting of the Association for Computational Linguistics},
   year      = {2022},
   pages     = {447-460},
@@ -63970,7 +64105,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2023},
   volume    = {6},
   number    = {24},
-  pages     = {01–09},
+  pages     = {01-09},
   doi       = {10.35631/ijhpl.624001},
   owner     = {Vincent},
   timestamp = {2024.01.25},
