--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -25061,6 +25061,19 @@
   timestamp = {2023.10.14},
 }
 
+@Article{Hassouni2006,
+  author    = {Hassouni, M. E. and Cherifi, H. and Aboutajdine, D.},
+  title     = {HOS-based image sequence noise removal},
+  journal   = {IEEE Transactions on Image Processing},
+  year      = {2006},
+  volume    = {15},
+  number    = {3},
+  pages     = {572–581},
+  doi       = {10.1109/tip.2005.863039},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
+}
+
 @Article{Hastie1979,
   author    = {Hastie, R. and Kumar, P. A.},
   title     = {Person memory: Personality traits as organizing principles in memory for behaviors},
@@ -40596,6 +40609,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.03.16},
 }
 
+@Article{Messadi2021,
+  author    = {Messadi, Mahammed and Cherifi, Hocine and Bessaid, Abdelhafid},
+  title     = {Segmentation and ABCD rule extraction for skin tumors classification},
+  journal   = {arXiv},
+  year      = {2021},
+  volume    = {cs.CV},
+  pages     = {2106.04372},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
+  url       = {https://arxiv.org/abs/2106.04372},
+}
+
 @Article{Mestyan2013,
   author    = {Mesty{\'{a}}n, M. and Yasseri, T. and Kert{\'{e}}sz, J.},
   title     = {Early Prediction of Movie Box Office Success Based on Wikipedia Activity Big Data},
@@ -44929,6 +44954,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1103/PhysRevE.86.036104},
   owner     = {Vincent},
   timestamp = {2011.01.12},
+}
+
+@InProceedings{Onwuka2015,
+  author    = {Onwuka, U. and Pineda, I. and Stepakoff, T.},
+  title     = {Quantification of character and plot in contemporary fiction},
+  booktitle = {IEEE Integrated STEM Education Conference},
+  year      = {2015},
+  pages     = {143-144},
+  doi       = {10.1109/isecon.2015.7119909},
+  owner     = {Vincent},
+  timestamp = {2024.04.26},
 }
 
 @InProceedings{Oord2013,
@@ -55465,7 +55501,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2022},
   volume    = {39},
   number    = {10},
-  pages     = {3155–3179},
+  pages     = {3155-3179},
   doi       = {10.1177/02654075211066618},
   owner     = {Vincent},
   timestamp = {2024.04.25},
